📝 (plugins.sass): Increase the height of the .swv-modal-wrapper to accommodate more content 🐛 (WalletConnect.vue): Fix an issue where the access token was not being saved correctly in localStorage ♻️ (useAuth.js): Refactor the useAuth composable to use a consistent key name for the access token in localStorage ♻️ (useAuth.js): Refactor the useAuth composable to remove unnecessary code and improve readability ♻️ (default.vue): Refactor the default layout component ♻️ (luna.vue): Refactor the luna layout component 📝 (auth.js): Add a new middleware to handle authentication logic 📝 (index.vue): Add the new auth middleware to the index page

--- a/assets/styles/plugins.sass
+++ b/assets/styles/plugins.sass
@@ -85,7 +85,7 @@
 		.swv-modal-wrapper
 			padding: 1rem
 			width: 480px
-			height: 180px
+			height: 230px
 
 		.swv-modal-title
 			font-size: 1rem
